--- a/Server/package.json
+++ b/Server/package.json
@@ -1,12 +1,30 @@
 {
-  "name": "formula_one_drivers_server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "name": "server",
+  "version": "0.0.0",
+  "private": true,
+  "main": "./server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./server.js",
+    "db::sync": "node ./db/db-sync",
+    "db::seed": "npx sequelize-cli db:seed:all",
+    "db::seed:undo": "npx sequelize-cli db:seed:undo:all",
+    "db::init": "npx sequelize-cli db:create && npm run db::sync && npm run db::seed"
   },
-  "keywords": [],
-  "author": "selav",
-  "license": "ISC"
+  "dependencies": {
+    "compression": "^1.7.4",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "helmet": "^4.1.0",
+    "morgan": "~1.9.1",
+    "pg": "^8.3.3",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4",
+    "sequelize-auto": "^0.5.4",
+    "sequelize-auto-migrations": "^1.0.3",
+    "sequelize-cli": "^6.2.0"
+  }
 }
