--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "@types/gapi.auth2": "0.0.52",
     "rxjs": "~6.6.0",
     "table": "^6.0.2",
     "tslib": "^2.0.0",
