--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "google-auth-library": "^6.0.6",
     "helmet": "^4.1.0",
     "moment": "^2.27.0",
     "morgan": "~1.9.1",
