--- a/Client/package.json
+++ b/Client/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "@types/gapi": "0.0.39",
     "@types/gapi.auth2": "0.0.52",
+    "material-design-icons": "^3.0.1",
     "rxjs": "~6.6.0",
     "table": "^6.0.2",
     "tslib": "^2.0.0",
