--- a/Client/package.json
+++ b/Client/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "~10.1.0",
     "@angular/cdk": "^10.2.0",
