--- a/Server/package.json
+++ b/Server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "main": "./server.js",
   "scripts": {
     "start": "node ./server.js",
